upcomg movies ui added

--- a/assets/langs/de-DE.json
+++ b/assets/langs/de-DE.json
@@ -1,4 +1,5 @@
 {
     "title": "Movies Danish",
-    "settings": "Settings Danish"
+    "settings": "Settings Danish",
+    "watch": "Watch Danish"
 }
