movie detail ui added

--- a/assets/langs/de-DE.json
+++ b/assets/langs/de-DE.json
@@ -1,5 +1,7 @@
 {
     "title": "Movies Danish",
     "settings": "Settings Danish",
-    "watch": "Watch Danish"
+    "watch": "Watch Danish",
+    "overview": "Overview Danish",
+    "genres": "Genres Danish"
 }
